force-app/main/default/objects/Sample_Request__c/fields/HCP__c.field-meta.xml
<CustomField>
    <fullName>HCP__c</fullName>
    <label>HCP</label>
    <referenceTo>HCP__c</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>