force-app/main/default/objects/Sample_Request__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <required>true</required>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>