force-app/main/default/objects/Sample_Request__c/recordTypes/Standard_Request.recordType-meta.xml
<RecordType>
    <fullName>Standard_Request</fullName>
    <active>true</active>
    <label>Standard Request</label>
</RecordType>