force-app/main/default/objects/Sample_Request__c/recordTypes/Urgent_Request.recordType-meta.xml
<RecordType>
    <fullName>Urgent_Request</fullName>
    <active>true</active>
    <label>Urgent Request</label>
</RecordType>