force-app/main/default/objects/Sample_Request__c/validationRules/Request_Date_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Date_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Request_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Request_Date__c</errorDisplayField>
    <errorMessage>Request date cannot be in the past.</errorMessage>
</ValidationRule>