force-app/main/default/objects/Sample_Request__c/validationRules/Valid_Requested_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Requested_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>