force-app/main/default/objects/Sample_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HCP__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sample Requests</label>
</ListView>