force-app/main/default/objects/Sample_Request__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>HCP__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Priority__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>